Agregado el contenido adicional y tipografia

--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el titulo nuevo</h1>
                 <p>Este es el parrafo de cosasss</p>
+                <p>Hola este es le nuevo parrafo</p>
             </div>
         </div>
     </body>
