Cambios cabecera para error

--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,9 @@
             <div id="cabecera">
                 Hyperblog
             </div>
+            <span id="tagline">
+                Tu blog maestro
+            </span>
             <div id="post">
                 <h1>Este es el titulo nuevo</h1>
                 <p>Este es el parrafo de cosasss</p>
